# rusty_router

./: .env  Cargo.toml  README.md  env.example  next_data.json  page.html  process_proofs.sh  proof.json  proof_details.json  rendered_page.html  template-error.json  template-success.json  test_env.rs  test_proof.json
proofs/: proof_0.json  proof_1.json  proof_2.json  proof_3.json  proof_4.json  proof_5.json  proof_6.json
src/: client.rs  converter.rs  lib.rs  main.rs  substrate.rs
