[package]
name = "rusty_router"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
regex = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SP1 dependencies removed for clean build
# Add back when implementing real conversion:
# sp1-sdk = { version = "5.2.1", optional = true }
# sp1-zkv-sdk = { git = "https://github.com/zkVerify/sp1-verifier", optional = true }
